# portfolio

./: docker-compose.yml  package.json
.github/workflows/: deploy.yml  prod.yaml
app/: .dockerignore  layout.tsx  page.tsx  pyproject.toml  requirements.txt
app/components/: Navbar.tsx
app/core/: models.py  schema.py  views.py
app/core/migrations/: 0001_initial.py
app/projects/: page.tsx
app/projects/[id]/: page.tsx
app/projects/add/: page.tsx
app/projects/drafts/: page.tsx
app/setup/: settings.py  urls.py
docker/: docker-compose.local.yml  docker-compose.yaml
docker/app/: Dockerfile
docker/web/: Dockerfile  README.md
lib/: prisma.ts
prisma/: schema.prisma
web/: next.config.mjs  package-lock.json
web/app/: layout.tsx
web/app/components/: About.tsx  Contact.tsx  Education.tsx  Experience.tsx  Hero.tsx  Services.tsx  Skills.tsx
webapp/: package.json
webapp/app/: layout.tsx
webapp/app/auth/in/: page.tsx
webapp/app/blogs/: page.tsx
webapp/app/projects/: page.tsx
webapp/app/projects/[slug]/: page.tsx
webapp/app/projects/private/add/: page.tsx
webapp/app/projects/private/drafts/: page.tsx
webapp/components/: Footer.tsx
webapp/components/project/: Projects.tsx
webapp/contexts/Auth/: AuthProvider.tsx
webapp/hooks/project/: useProjects.ts
webapp/services/: utils.ts
webapp/type/: auth.type.ts  project.type.ts
